# Pico-lab-exercises

Exercise1-Blinking_led/Exercise1-Blinking_led/: CMakeLists.txt  main.c
Exercise2-ADC/Exercise2-ADC/Exercise1/: CMakeLists.txt  main.c
Exercise2-ADC/Exercise2-ADC/Exercise2/: CMakeLists.txt  main.c
Exercise3-Timers/Exercise3-Timers/Exercise1/: CMakeLists.txt  main.c
Exercise3-Timers/Exercise3-Timers/Exercise2/: CMakeLists.txt  main.c
Exercise3-Timers/Exercise3-Timers/Exercise3/: CMakeLists.txt  main.c
